[project]
name = "cybersecurity-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "langchain-community>=0.3.3",
    "langchain-core>=0.3.13",
    "langchain-openai>=0.2.4",
    "langgraph>=0.2.39",
    "requests>=2.32.3",
    "tavily-python>=0.5.0",
    "wikipedia>=1.4.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
]
